Fix Footer Length
- Get that darn footer to take up the whole width of the page. Currently, it is uneven, and I believe it is much preferred to have this at 100% length

-Hide X axis overflow on entire page

--- a/app/components/Footer/footer.module.scss
+++ b/app/components/Footer/footer.module.scss
@@ -4,6 +4,8 @@
   margin-top: 174px;
   background-color: var(--red);
   width: 100vw;
+  position: absolute;
+  left:0;
 }
 
 .contentWrapper {
